--- a/Front-End Web UI Frameworks and Tools/Bootstrap4/conFusion/package.json
+++ b/Front-End Web UI Frameworks and Tools/Bootstrap4/conFusion/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.3.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.1.1"
   }
 }
